# sphinx-adr

./: .gitignore  CLAUDE.md  DESIGN.md  Pipfile  README.md  pyproject.toml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: conf.py  index.rst
docs/adr/: 0001-use-sphinx-for-documentation.rst  0002-adopt-adr-process.rst  0003-use-python-for-backend.rst  index.rst
example/: README.md  conf.py
example/adr/: 0001-record-architecture-decisions.rst  0002-use-rest-api.rst  0004-switch-to-mongodb.rst  index.rst
examples/: README.md
examples/alabaster/: conf.py  index.rst
examples/alabaster/adr/: 0003-use-postgresql.rst  index.rst
examples/book-theme/: conf.py
examples/book-theme/adr/: 0004-switch-to-mongodb.rst  index.rst
examples/pydata-theme/: conf.py
examples/pydata-theme/adr/: 0001-record-architecture-decisions.rst  0002-use-rest-api.rst  0004-switch-to-mongodb.rst
sphinx_adr/: __init__.py  collector.py  directives.py  nodes.py
sphinx_adr/static/: sphinx_adr.css
sphinx_adr/templates/: adr_nav.html
tests/: conftest.py  test_extension.py
