[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-adr"
version = "0.1.0"
description = "Sphinx extension to document Architecture Decision Records (ADRs)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "sphinx-adr contributors" },
]
keywords = ["sphinx", "adr", "architecture", "decision", "records", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/bngoy/sphinx-adr"
Repository = "https://github.com/bngoy/sphinx-adr"
Issues = "https://github.com/bngoy/sphinx-adr/issues"
