[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-adr"
dynamic = ["version"]
description = "Sphinx extension to document Architecture Decision Records (ADRs)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "sphinx-adr contributors" },
]
keywords = ["sphinx", "adr", "architecture", "decision", "records", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
examples = [
    "pydata-sphinx-theme",
    "sphinx-book-theme",
]

[project.urls]
Homepage = "https://github.com/bngoy/sphinx-adr"
Repository = "https://github.com/bngoy/sphinx-adr"
Issues = "https://github.com/bngoy/sphinx-adr/issues"

# ---------------------------------------------------------------------------
# Hatchling -- read version from __init__.py
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "sphinx_adr/__init__.py"
pattern = '__version__\s*=\s*"(?P<version>[^"]+)"'

# ---------------------------------------------------------------------------
# uv -- project scripts
# ---------------------------------------------------------------------------

[tool.uv.scripts]
docs = "sphinx-build -b html docs docs/_build/html"
test = "python -m pytest tests/ -v"
lint = "ruff check ."
fmt = "ruff format ."
example-alabaster = "sphinx-build -b html examples/alabaster examples/alabaster/_build/html"
example-pydata = "sphinx-build -b html examples/pydata-theme examples/pydata-theme/_build/html"
example-book = "sphinx-build -b html examples/book-theme examples/book-theme/_build/html"

# ---------------------------------------------------------------------------
# Ruff -- linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["sphinx_adr"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
