[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-adr"
version = "0.0.1"
description = "Sphinx extension to document Architecture Decision Records (ADRs)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "sphinx-adr contributors" },
]
keywords = ["sphinx", "adr", "architecture", "decision", "records", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "sphinx>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
examples = [
    "pydata-sphinx-theme",
    "sphinx-book-theme",
]

[project.urls]
Homepage = "https://github.com/bngoy/sphinx-adr"
Repository = "https://github.com/bngoy/sphinx-adr"
Issues = "https://github.com/bngoy/sphinx-adr/issues"

# ---------------------------------------------------------------------------
# Ruff -- linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["sphinx_adr"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
